Fix letter spacing

--- a/src/css/classify-styles.css
+++ b/src/css/classify-styles.css
@@ -43,7 +43,7 @@ header {
 	letter-spacing: 0.1vw;
 	font-size: 0.85vw;
 	font-weight: 400;
-	padding: 0.5vw 1vw 0.5vw 1.1vw;
+	padding: 0.5vw 1vw;
 	width: 6vw;
 	flex-grow: 0;
 	flex-shrink: 0;
@@ -421,7 +421,7 @@ li {
 	font-family: proxima-nova, sans-serif;
 	padding: 0.35vw 0 0.35vw 1vw;
 	margin: 0 0 0.5vw 1vw;
-	width: 8vw;
+	width:7.75vw;
 	flex-grow: 0;
 	flex-shrink: 0;
 	border-radius: 5vw;
@@ -433,20 +433,12 @@ li {
 }
 
 .control-text {
-	letter-spacing: 1.28px;
+	letter-spacing: 0.1vw;
 	font-style: normal;
 	font-weight: 500;
 	color: #FFFFFF;
 	text-transform: uppercase;
 	cursor: pointer;
-}
-
-.select-all {
-	width: 1.25vw;
-	height: 1.25vw;
-	margin: 0.1vw 0.5vw 0 0;
-	flex-grow: 0;
-	flex-shrink: 0;
 }
 
 
